BOST-83 fix: shift sticky position for code sample on entity pages

--- a/src/components/StickyLayout/StickyLayout.module.css
+++ b/src/components/StickyLayout/StickyLayout.module.css
@@ -23,6 +23,12 @@
   }
 }
 
+.sticky.entity {
+  @media (min-width: 997px) {
+    top: 4rem;
+  }
+}
+
 .root {
   display: grid;
   grid-template-columns: 1fr;
